# okmr_auv

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: devcontainer-ci.yml
ros2_ws/src/okmr_automated_planner/okmr_automated_planner/: README.md  automated_planner.py
ros2_ws/src/okmr_automated_planner/okmr_automated_planner/state_machines/: finding_gate_state_machine.py  root_state_machine.py
ros2_ws/src/okmr_hardware_interface/okmr_hardware_interface/: esp32_bridge.py  motor_publisher.py
ros2_ws/src/okmr_msgs/: CMakeLists.txt
ros2_ws/src/okmr_msgs/msg/: BoundingBox.msg
ros2_ws/src/okmr_navigation/okmr_navigation/handlers/: get_pose_twist_accel.py
ros2_ws/src/okmr_navigation/src/: dead_reckoning.cpp
ros2_ws/src/okmr_object_detection/okmr_object_detection/: onnx_segmentation_detector.py
ros2_ws/src/okmr_object_detection/test/: detmodel_test.py
ros2_ws/src/stonefish_vendor/: CMakeLists.txt  package.xml
