<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stonefish_vendor</name>
  <version>0.0.0</version>
  <description>Wrapper for the Stonefish marine simulation library.</description>
  <maintainer email="erykhalicki0@gmail.com">eryk</maintainer>
  <license>sigma license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>opengl</build_depend>
  <build_depend>sdl2</build_depend>
  <build_depend>freetype</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>